--- a/Parkhaus.html
+++ b/Parkhaus.html
@@ -4,7 +4,9 @@
     <title>Parkhaus</title>
 </head>
 <body>
-<div id="digital-clock"></div>
+
+<div id="clock">Clock</div>
+<script src="javascript/digitalclock.js"></script>
 
 
 <script type="text/javascript">
