--- a/Parkhaus.html
+++ b/Parkhaus.html
@@ -42,8 +42,8 @@
        <label for="frauentarif">Frau</label>
     </br>
     </br>
-        <button type="reset">Wiederrufen</button>
-        <button type="submit">Bestätigen</button>
+        <button type="reset">Widerrufen</button>
+        <button type="submit">Bestaetigen</button>
     </form>
 
 <script type="text/javascript">
@@ -203,7 +203,7 @@ class Investor extends Kunde{
 
         var neuesHelpArray=[];
         if(i==0){
-            window.alert("ES ist noch kein Auto bzw. nicht mehr im Parkhaus Sie Können noch kein Ticket bezahlen");
+            window.alert("Es ist noch kein Auto bzw. nicht mehr im Parkhaus. Sie können noch kein Ticket bezahlen");
         }
         else{
             var liste=document.getElementById("autosImParkhaus");
