--- a/Startseite.html
+++ b/Startseite.html
@@ -8,8 +8,8 @@
 <h2>Autos im Parkhaus:</h2>
 <form method="GET" action="Parkhaus.html">
     <p>
-        <label for="anzahl">Anzahl Parklpaetzte angeben:</label>
-        <input type="Number" name="anzahl" id="anzahl" size="25">
+        <label for="count">Anzahl Parklpaetzte angeben:</label>
+        <input type="Number" name="count" id="count" size="25">
     </p>
     <p><input type="submit" value="Uebergeben"></p>
 </form>
