--- a/Startseite.html
+++ b/Startseite.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
 <head>
     <meta charset="UTF-8">
     <title>Startseite</title>
@@ -8,10 +8,10 @@
 <h2>Autos im Parkhaus:</h2>
 <form method="GET" action="Parkhaus.html">
     <p>
-        <label for="count">Anzahl Parklpaetzte angeben:</label>
+        <label for="count">Anzahl Parklpätze angeben:</label>
         <input type="Number" name="count" id="count" size="25">
     </p>
-    <p><input type="submit" value="Uebergeben"></p>
+    <p><input type="submit" value="Bestätigen"></p>
 </form>
 
 </body>
