06-09-2020 15:22 Uhr: Kleiner Textfehler korrigiert

--- a/Startseite.html
+++ b/Startseite.html
@@ -8,7 +8,7 @@
 <h2>Autos im Parkhaus:</h2>
 <form method="GET" action="Parkhaus.html">
     <p>
-        <label for="count">Anzahl Parklpätze angeben:</label>
+        <label for="count">Anzahl Parkplätze angeben:</label>
         <input type="Number" name="count" id="count" size="25">
     </p>
     <p><input type="submit" value="Bestätigen"></p>
