12-09-2020 21:16 Uhr: Neuer Knopf
Neuer Button hinzugefügt

--- a/Startseite.html
+++ b/Startseite.html
@@ -11,7 +11,7 @@
         <label for="anzahl">Anzahl Parklpl&aumltze angeben:</label>
         <input type="Number" name="anzahl" id="anzahl" size="25">
     </p>
-    <p><input type="submit" value="&Uumlbergeben"></p>
+    <p><button type="submit">&Uumlbergeben</button></p>
 </form>
 
 </body>
