13-09-2020 Änderungen: Es wurden weiter Anpassungen für das Observer-Pattern vorgenommen.

--- a/Parkhaus.html
+++ b/Parkhaus.html
@@ -25,6 +25,7 @@
 </p>
 
 <button id="btnNewCarToPark" onclick="CarsInList()">Neues Auto in Parkhaus</button>
+<div id="carPark"></div>
 <form  id="Bezahlvorgang">
         <h1>Bezahlen</h1>
        <label for="Ticket-Nr.">Ticket-Nr.
@@ -46,32 +47,37 @@
         <button type="submit">Best&aumltigen</button>
         <button type="reset">Widerrufen</button>
     </form>
- <button onclick="pay()">Bezahlen</button>
+ <button id="btnPay" onclick="pay()">Bezahlen</button>
 </br>
 </br>
 <select id="autosImParkhausbezahltLoeschen"></select>
-
+<button id="addNewObserver">Add new Observer checkbox</button>
+<input id="mainCheckbox" type="checkbox"/>
+<div id="observersContainer"></div>
 
 <script type="text/javascript">
-// Observer
+
+
+// Define properties of the Observer
 function Observerlist(){
     this.observerlist = [];
 }
 
+// Function for adding observers to the list
 Observerlist.prototype.add = function(obj){
     return this.observerlist.push(obj);
 }
-
+// Function for counting the elements in the list
 Observerlist.prototype.count = function(){
     return this.observerlist.length;
 }
-
+// Getting an element at an index
 Observerlist.prototype.get = function(index){
     if(index > -1 && index < this.observerlist.length){
         return this.observerlist[index];
     }
 }
-
+// Getting the index of an element
 Observerlist.prototype.indexOf = function(obj, startIndex){
     var i = startIndex;
 
@@ -84,30 +90,31 @@ Observerlist.prototype.indexOf = function(obj, startIndex){
 
     return -1;
 };
-
+// Remove Element at a certain Index
 Observerlist.prototype.removeAt = function(index){
     this.observerlist.splice(index,1);
 }
-
+// Defines the custom action an observer does
 function Observer(){
     this.update = function(){
     
     };
 }
 
+
 // Subscriber
 function Subject(){
     this.observers = new Observerlist();
 }
-
+// Adds an observer to the list
 Subject.prototype.addObserver = function(observer){
     this.observers.add(observer);
 }
-
+// Removes an observer from the list
 Subject.prototype.removeObserver = function(observer){
     this.observers.removeAt(this.observers.indexOf(observer,0));
 }
-
+// Notifies the observers, that an event has occured
 Subject.prototype.notify = function(context){
     var observerCount = this.observers.count();
     for(var i=0; i <observerCount; i++){
@@ -115,15 +122,39 @@ Subject.prototype.notify = function(context){
     }
 }
 
-//Observer-Pattern
+// Extends Objects
 function extend(obj,extension){
     for(var key in extension){
         obj[key] = extension[key];
     }
 }
+// Variables that hold the Objects in the DOM
+var controlCheckbox = document.getElementById("btnPay"),
+    addBtn = document.getElementById("btnNewCarToPark"),
+    container = document.getElementById("carPark");
 
+extend(controlCheckbox, new Subject());
 
+// 
+controlCheckbox.onclick = function(){
+    controlCheckbox.notify(controlCheckbox.checked);
+};
 
+// This Button adds a new Observer
+addBtn.onclick = addNewObserver;
+// Function for adding an observer
+function addNewObserver(){
+    var check = document.createElement("input");
+    check.type = "checkbox";
+    extend(check,new Observer());
+    check.update = function(value){
+    console.log("Test")
+};
+
+controlCheckbox.addObserver(check);
+container.appendChild(check);
+
+};
 
 
 
@@ -375,7 +406,7 @@ class Investor extends Kunde{
             createJSON(arrayAuto);
             listeRefresh();
         }
-    }
+    
 
 </script>
 </body>
