14-09-2020 Änderungen: Chart.js wurde hinzugefügt.

--- a/Parkhaus.html
+++ b/Parkhaus.html
@@ -3,6 +3,7 @@
 <head>
     <title>Parkhaus</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.js"></script>
 </head>
 <body>
 
@@ -18,6 +19,8 @@
 <h2>Uhrzeit:</h2>
 <div id="digitalclock" class="clock">Clock</div>
 <script src="javascript/digitalclock.js"></script>
+<canvas id="testChart" width="400" height="400"></canvas>
+<script src="javascript/charts.js"></script>
 <h4>Anzahl Parkplätze gesamt:</h4>
 <p id="anzahlParkplaetzeGesamt"></p>
 <h4>Anzahl Freie Parkplätze:</h4>
